<resources>
    <string name="app_name">AppointmentApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerVP">Cadastrar</string>
    <string name="loginVP">Login</string>
    <string name="helper_required">*Obrigatório</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="registerButton">Cadastrar</string>
    <string name="namefieldRegister">Nome</string>
    <string name="cpfRegister">CPF</string>
    <string name="phoneRegister">Celular</string>
    <string name="home_destination_label">Home</string>
    <string name="schedule_destination_label">Agenda</string>
    <string name="config_destination_label">Config</string>
    <string name="buttonNavigationRailText">Agendar</string>
    <string name="account">Conta</string>
    <string name="account_description">Alterar senha</string>
    <string name="icone_seta_direita">Ícone, seta para direita</string>
</resources>