<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.initial.register.registerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".fragment.CadastrarFragment">

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/registerButton"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:backgroundTint="@color/buttonColorLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_senha" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_nome"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/boxcolorLogin"
            app:boxStrokeColor="@color/boxcolorLogin"
            app:hintTextColor="@color/boxcolorLogin"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/namefieldRegister"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCpf"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/boxcolorLogin"
            app:boxStrokeColor="@color/boxcolorLogin"
            app:errorEnabled="true"
            app:hintTextColor="@color/boxcolorLogin"
            app:layout_constraintTop_toBottomOf="@+id/layout_nome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpfRegister"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/boxcolorLogin"
            app:boxStrokeColor="@color/boxcolorLogin"
            app:hintTextColor="@color/boxcolorLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCpf">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_telefone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/boxcolorLogin"
            app:boxStrokeColor="@color/boxcolorLogin"
            app:hintTextColor="@color/boxcolorLogin"
            app:layout_constraintTop_toBottomOf="@+id/layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phoneRegister"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_senha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/boxcolorLogin"
            app:boxStrokeColor="@color/boxcolorLogin"
            app:hintTextColor="@color/boxcolorLogin"
            app:layout_constraintTop_toBottomOf="@+id/layout_telefone"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/campoSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>